--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+
 @import "tailwindcss";
 
 :root {
@@ -16,8 +17,6 @@
   :root {
   
     --secondary: #e6e6fa;
-    --lime: #08CB00;
-    --lime-dark: #65a30d;
     --neon-purp: #B13BFF;
     --Ink: #212122;
     --Charc: #333333;
@@ -26,10 +25,11 @@
   }
 }
 
+
 body {
+  overflow: hidden;
   width: 100%;
   height: 100%;
-  background: var(--pBlack);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
